--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                         </div>
                     </div>
 
-                    <div  id="exsys_switch" style="display:none; position:relative; width: 276px; left:730px; top:0px;font-size: 16px; margin-bottom: 10px;padding:8px; border-radius: 8px">
+                    <div  style="display:none; position:relative; width: 276px; left:730px; top:0px;font-size: 16px; margin-bottom: 10px;padding:8px; border-radius: 8px">
                         <div id="exsys_text" style="margin-bottom: 8px;position: relative;left: 0px">Compare with existing systems: Off</div>
 
                     </div>
@@ -723,7 +723,7 @@
                                 </div>
                             </div>
 
-                                <div id="exist_title" style="display:inline-block; width: 30%; color:#1C0AA8; border-radius: 8px; font-size: 16px; padding-left: 7%; opacity: 1 ">
+                                <div id="exsys_switch" style="display:inline-block; width: 30%; color:#1C0AA8; border-radius: 8px; font-size: 16px; padding-left: 7%; opacity: 1 ">
                                     <span>Existing Systems</span><br><br>
                                     <div style="position:relative;left: 150px;top: -50px;">
                                         <div class="tab down" name="exsys_tab" style="border-bottom-right-radius: 0px;border-top-right-radius: 0px">Off</div><div name="exsys_tab" class="tab" style="border-bottom-left-radius: 0px;border-top-left-radius: 0px">On</div>
